- bug fix on travel date in train link in version 1.3
- bug fix on travel date in train link in version 1.3
- replaced out-dated java functions
- switched all tests to non-deprecated functions